--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.1",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "swiper": "^12.0.2",
     "tailwindcss": "^4.1.13"
